--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
             </div><!--menu-->
         </div>
     </header>
-    <div class="linha"></div>
+    <div class="linha">
+        <ul>
+            <li>
+                <a href="#">Cachaças <img href="imgs/seta.png" width="100" height="100"></a> 
+            </li>
+            <li>
+                <a href="#">Vinhos</a>
+            </li>
+            <li>
+                <a href="#">Gins</a>
+            </li>
+            <li>
+                <a href="#">Whiskys</a>
+            </li>
+            <li>
+                <a href="#">Licores</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
