--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Teste</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width-device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
     <header>
@@ -31,19 +32,66 @@
     <div class="linha">
         <ul>
             <li>
-                <a href="#">Cachaças <img href="imgs/seta.png" width="100" height="100"></a> 
+                <a href="#">Cachaças<svg class="setafoda" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="5px" y="5px"
+	                display="flex" viewBox="0 0 284.929 284.929" style="enable-background:new 0 0 284.929 284.929;"
+	                xml:space="preserve">
+                        <path d="M282.082,76.511l-14.274-14.273c-1.902-1.906-4.093-2.856-6.57-2.856c-2.471,0-4.661,0.95-6.563,2.856L142.466,174.441
+		                    L30.262,62.241c-1.903-1.906-4.093-2.856-6.567-2.856c-2.475,0-4.665,0.95-6.567,2.856L2.856,76.515C0.95,78.417,0,80.607,0,83.082
+		                    c0,2.473,0.953,4.663,2.856,6.565l133.043,133.046c1.902,1.903,4.093,2.854,6.567,2.854s4.661-0.951,6.562-2.854L282.082,89.647
+		                    c1.902-1.903,2.847-4.093,2.847-6.565C284.929,80.607,283.984,78.417,282.082,76.511z"/>
+                    </svg></a> 
+                    <ul class="dropdown">
+                        <li><a href="#"><h3>Cachaças 1</h3></a></li>
+                        <li><a href="#">Cachaças 1</a></li>
+                        <li><a href="#">Cachaças 1</a></li>
+                        <li><a href="#">Cachaças 1</a></li>
+                    </ul>   
+            </li>
+            
+            <!-- divisa  -->
+
+            <li>
+                <a href="#">Vinhos<svg class="setafoda" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="5px" y="5px"
+	                display="flex" viewBox="0 0 284.929 284.929" style="enable-background:new 0 0 284.929 284.929;"
+	                xml:space="preserve">
+                        <path d="M282.082,76.511l-14.274-14.273c-1.902-1.906-4.093-2.856-6.57-2.856c-2.471,0-4.661,0.95-6.563,2.856L142.466,174.441
+		                    L30.262,62.241c-1.903-1.906-4.093-2.856-6.567-2.856c-2.475,0-4.665,0.95-6.567,2.856L2.856,76.515C0.95,78.417,0,80.607,0,83.082
+		                    c0,2.473,0.953,4.663,2.856,6.565l133.043,133.046c1.902,1.903,4.093,2.854,6.567,2.854s4.661-0.951,6.562-2.854L282.082,89.647
+		                    c1.902-1.903,2.847-4.093,2.847-6.565C284.929,80.607,283.984,78.417,282.082,76.511z"/>
+                    </svg></a>
+                    <div>
+                        
+                    </div>
             </li>
             <li>
-                <a href="#">Vinhos</a>
+                <a href="#">Gins<svg class="setafoda" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="5px" y="5px"
+	                display="flex" viewBox="0 0 284.929 284.929" style="enable-background:new 0 0 284.929 284.929;"
+	                xml:space="preserve">
+                        <path d="M282.082,76.511l-14.274-14.273c-1.902-1.906-4.093-2.856-6.57-2.856c-2.471,0-4.661,0.95-6.563,2.856L142.466,174.441
+		                    L30.262,62.241c-1.903-1.906-4.093-2.856-6.567-2.856c-2.475,0-4.665,0.95-6.567,2.856L2.856,76.515C0.95,78.417,0,80.607,0,83.082
+		                    c0,2.473,0.953,4.663,2.856,6.565l133.043,133.046c1.902,1.903,4.093,2.854,6.567,2.854s4.661-0.951,6.562-2.854L282.082,89.647
+		                    c1.902-1.903,2.847-4.093,2.847-6.565C284.929,80.607,283.984,78.417,282.082,76.511z"/>
+                    </svg></a>
             </li>
             <li>
-                <a href="#">Gins</a>
+                <a href="#">Whiskys<svg class="setafoda" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="5px" y="5px"
+	                display="flex" viewBox="0 0 284.929 284.929" style="enable-background:new 0 0 284.929 284.929;"
+	                xml:space="preserve">
+                        <path d="M282.082,76.511l-14.274-14.273c-1.902-1.906-4.093-2.856-6.57-2.856c-2.471,0-4.661,0.95-6.563,2.856L142.466,174.441
+		                    L30.262,62.241c-1.903-1.906-4.093-2.856-6.567-2.856c-2.475,0-4.665,0.95-6.567,2.856L2.856,76.515C0.95,78.417,0,80.607,0,83.082
+		                    c0,2.473,0.953,4.663,2.856,6.565l133.043,133.046c1.902,1.903,4.093,2.854,6.567,2.854s4.661-0.951,6.562-2.854L282.082,89.647
+		                    c1.902-1.903,2.847-4.093,2.847-6.565C284.929,80.607,283.984,78.417,282.082,76.511z"/>
+                    </svg></a>
             </li>
             <li>
-                <a href="#">Whiskys</a>
-            </li>
-            <li>
-                <a href="#">Licores</a>
+                <a href="#">Licores<svg class="setafoda" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="5px" y="5px"
+	                display="flex" viewBox="0 0 284.929 284.929" style="enable-background:new 0 0 284.929 284.929;"
+	                xml:space="preserve">
+                        <path d="M282.082,76.511l-14.274-14.273c-1.902-1.906-4.093-2.856-6.57-2.856c-2.471,0-4.661,0.95-6.563,2.856L142.466,174.441
+		                    L30.262,62.241c-1.903-1.906-4.093-2.856-6.567-2.856c-2.475,0-4.665,0.95-6.567,2.856L2.856,76.515C0.95,78.417,0,80.607,0,83.082
+		                    c0,2.473,0.953,4.663,2.856,6.565l133.043,133.046c1.902,1.903,4.093,2.854,6.567,2.854s4.661-0.951,6.562-2.854L282.082,89.647
+		                    c1.902-1.903,2.847-4.093,2.847-6.565C284.929,80.607,283.984,78.417,282.082,76.511z"/>
+                    </svg></a>
             </li>
         </ul>
     </div>
